[package]
name = "apca-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apca-core = { path = "../apca-core" }
chrono = { version = "0.4.19", features = ["serde"] }
rust_decimal = "1.20.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.78"
uuid = { version = "0.8.2", features = ["serde"] }
vila = "3.0.0"

[dev-dependencies]
mockito = "0.30.0"
tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread"] }
